fixed splide image overlap bug

--- a/src/Components/ProjectSlider/ProjectSlider.css
+++ b/src/Components/ProjectSlider/ProjectSlider.css
@@ -5,6 +5,3 @@
     margin: 5px auto;
 }
 
-.project-slider img {
-    width: auto;
-}
